[package]
name = "smu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
hyper = "0.14.26"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
